# TheBreathingHand

./: .cursorrules  AI_CONTEXT.md  Android Studio Error.txt  FULL_PROJECT_CPP.txt  FULL_PROJECT_KOTLIN.txt  MPE_)NORMAL_MIDI_Sound.txt  README.md  gradle.properties  session_log.csv  settings.gradle.kts
COMMANDS/: FULL_PROJECT_CPP.txt
DOCS/: BREATHING HAND — AI REVIEWER PROMPT (SHORT).md  BREATHING HAND — CODE REVIEW PROMPT (AUTHORITATIVE).md  BREATHING HAND — GOLDEN RULES.md  Breathing Hand — Implementation Blueprint v0.2.md  FINAL CONFIRMATION CHECKLIST.md  Gesture Grammar Spec v0.2 — Continuous Harmonic Field.md  MIDI Implementation Chart — Breathing Hand.md  OBoe_and_Native_Integration.md  Oboe_FluidSynth_Implementation_Summary.md  Recommended_Future_Features_for_Breathinghand.txt  Release_Coalescing_Implementation.md  opening prompt.md
app/: build.gradle.kts
app/src/androidTest/java/com/breathinghand/core/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeSynthEngine.cpp  README.md  Wavetable.cpp  Wavetable.h
app/src/main/java/com/breathinghand/: ControlsOverlayView.kt  MainActivity.kt  MidiLogger.kt  TouchLogger.kt
app/src/main/java/com/breathinghand/PROMPTS/: CHAT_BOOTSTRAP_TEMPLATE.md  Project_state.md
app/src/main/java/com/breathinghand/audio/: AudioDecoder.kt  OboeSynthesizer.kt
app/src/main/java/com/breathinghand/core/: AndroidTouchDriver.kt  CalibrationView.kt  HarmonicEngine.kt  HarmonicOverlayView.kt  InputTuning.kt  MutableTouchPolar.kt  OneEuroFilter.kt  SmartInputHAL.kt  TimbreNavigator.kt  TouchFrame.kt  TouchMath.kt  VoiceLeader.kt
app/src/main/java/com/breathinghand/core/midi/: AndroidMidiPlatform.kt  AndroidMidiSink.kt  FanOutMidiSink.kt  MidiOut.kt  MonoChannelMidiSink.kt  OboeMidiSink.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/breathinghand/audio/: AudioDecoderTest.kt
app/src/test/java/com/breathinghand/core/: ExampleUnitTest.kt
docs/specs/: Architecture_Spec_v0.3_Earth_and_Wind.md  GESTURE_GRAMMAR.md  GOLDEN_RULES.md  IMPLEMENTATION_BLUEPRINT_v0.2.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle.kts
shared/src/androidDeviceTest/kotlin/com/breathinghand/shared/: ExampleInstrumentedTest.kt
shared/src/androidHostTest/kotlin/com/breathinghand/shared/: ExampleUnitTest.kt  HarmonicLogicTest.kt
shared/src/androidMain/kotlin/com/breathinghand/core/midi/: AndroidMidiOutput.kt  TouchSource.kt  VoiceAllocator.kt
shared/src/androidMain/kotlin/com/breathinghand/shared/: Platform.android.kt
shared/src/commonMain/kotlin/com/breathinghand/core/: ChordTable.kt  Core_Data_Structures.kt  GestureAnalyzerV01.kt  HarmonicEngine.kt  HarmonicFieldMapV01.kt  HarmonicState.kt  InputTuning.kt  MidiOutput.kt  MusicalConstants.kt  MutableTouchPolar.kt  TimbreNavigator.kt  TouchFrame.kt  TouchMath.kt  TransitionWindow.kt  VoiceLeader.kt
shared/src/commonMain/kotlin/com/breathinghand/core/midi/: MidiOut.kt  MidiOutput.kt  MidiSink.kt  MusicalConstants.kt  SlotPresence.kt  VoiceLeader.kt
shared/src/commonMain/kotlin/com/breathinghand/shared/: Platform.kt
shared/src/iosMain/kotlin/com/breathinghand/shared/: Platform.ios.kt
tools/: check_apk_alignment.py
